@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/c_party.c: Make party passwords of 8 characters work, disallow longer
+   passwords. Based on patch #1080096 from Casper.
+   Correct help message for party commands.
+Andreas Kirschbaum 2004-12-10
+
 plugin/plugin_python.c: change 'long long' so 'sint64' (typedef).
 Ryo Saeba 2004-11-29
 
